update Avatar Api
